Get Required Recipes from all steps
