# src/api/apis/ScheduleApi.ts
@@ -1,0 +1,62 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * amber
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 2.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+import * as runtime from '../runtime';
+import {
+    Guid,
+    GuidFromJSON,
+    GuidToJSON,
+} from '../models';
+
+export interface ScheduleRecipesRequest {
+    recipeIds: Array<Guid>;
+}
+
+/**
+ * 
+ */
+export class ScheduleApi extends runtime.BaseAPI {
+
+    /**
+     */
+    async scheduleRecipesRaw(requestParameters: ScheduleRecipesRequest): Promise<runtime.ApiResponse<void>> {
+        if (requestParameters.recipeIds === null || requestParameters.recipeIds === undefined) {
+            throw new runtime.RequiredError('recipeIds','Required parameter requestParameters.recipeIds was null or undefined when calling scheduleRecipes.');
+        }
+
+        const queryParameters: any = {};
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        headerParameters['Content-Type'] = 'application/json';
+
+        const response = await this.request({
+            path: `/Schedule/recipes`,
+            method: 'POST',
+            headers: headerParameters,
+            query: queryParameters,
+            body: requestParameters.recipeIds.map(GuidToJSON),
+        });
+
+        return new runtime.VoidApiResponse(response);
+    }
+
+    /**
+     */
+    async scheduleRecipes(requestParameters: ScheduleRecipesRequest): Promise<void> {
+        await this.scheduleRecipesRaw(requestParameters);
+    }
+
+}
